# SuperFGD-simulation-analysis

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  analisys  cmake_install.cmake  draw-hist.py  main.py
include/: AnalizeEvents.hh  ExtractSimulationInformation.hh  ExtractTrackInfo.hh  SimulationAnalizer.hh  particlesDefinition.hh
src/: DR.C
